Implemented new/updated requirements.

--- a/views/navigations/signpost/signpost-item.html.twig
+++ b/views/navigations/signpost/signpost-item.html.twig
@@ -11,7 +11,8 @@
             <h3 class="card-title fw-normal {{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
                 <strong>{{ post.title }}</strong>
             </h3>
-            <p class="small card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}" style="text-align: justify;">
+            <p class="small card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}"
+               style="text-align: justify;">
                 {{ post.post_excerpt }}
             </p>
         </div>
