--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -70,7 +70,8 @@
                                 <!-- Results are placed here by JS. -->
                                 <tr>
                                     <td class="border-0">
-                                        Zadejte chemický vzorec do formuláře a kalkulačka zde zobrazí vypočtenou molární hmotnost.
+                                        Zadejte chemický vzorec do formuláře a kalkulačka zde zobrazí vypočtenou molární
+                                        hmotnost.
                                     </td>
                                 </tr>
                             </table>
