--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -52,14 +52,16 @@
             <nav class="row mt-3 mb-5 g-5 justify-content-md-center">
                 {% for company in companies %}
                     <article class="col-12 col-md-6 col-lg-4 col-xl-3">
-                        <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ company.path }}">
+                        <a class="card signpost-card border-0 h-100 text-dark text-decoration-none"
+                           href="{{ company.path }}">
                             {% set image_src = get_image(company.meta('_company_logo')).src|default(company.thumbnail.src|default) %}
                             {% if image_src|default %}
                                 <div class="w-100 card-img card-img-top mx-auto mt-4 ratio ratio-16x9 rounded rounded-2"
                                      style="background-image: url({{ image_src }}); background-size: contain;">
                                 </div>
                             {% endif %}
-                            <div class="card-body d-flex flex-column align-middle justify-content-center" style="min-height: 6em;">
+                            <div class="card-body d-flex flex-column align-middle justify-content-center"
+                                 style="min-height: 6em;">
                                 <h5 class="card-title text-center">
                                     {{ company.title }}
                                 </h5>
