--- a/views/post-previews/_photo_preview_vertical.twig
+++ b/views/post-previews/_photo_preview_vertical.twig
@@ -4,7 +4,8 @@
     <a class="card border-0 h-100 text-dark text-decoration-none flex-column d-flex flex-nowrap" href="{{ image_src }}">
         {% if image_src|default and image_src|length > 0 %}
             <div class="card-img-top mx-auto mt-3">
-                <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}" alt="{{ post.thumbnail.alt }}">
+                <img class="d-block w-100 mh-100 p-2 img-thumbnail" src="{{ image_src }}"
+                     alt="{{ post.thumbnail.alt }}">
             </div>
         {% endif %}
         <div class="card-body d-flex flex-column">
