--- a/views/widgets/eu-msmt-widget/eu-msmt-widget.html.twig
+++ b/views/widgets/eu-msmt-widget/eu-msmt-widget.html.twig
@@ -5,7 +5,8 @@
 <div class="row align-items-center py-4 text-dark border-top border-info">
     <div class="col-12 d-flex flex-column flex-lg-row align-items-center justify-content-between">
         <div>Tyto webové stránky vznikly za finanční podpory:</div>
-        <img src="{{ footer_eu_msmt }}" alt="Evropské strukturální a investiční fondy a MŠMT" class="footer-eu-eu-msmt-widget-image">
+        <img src="{{ footer_eu_msmt }}" alt="Evropské strukturální a investiční fondy a MŠMT"
+             class="footer-eu-eu-msmt-widget-image">
     </div>
 </div>
 {{ args.after_widget|raw }}
