--- a/views/layout/header.html.twig
+++ b/views/layout/header.html.twig
@@ -1,7 +1,7 @@
 {% set logo = site.theme.link ~ '/images/logo/katedra-anorganicke-chemie-UPOL-zakladni-varianta.svg' %}
 
 <header id="header" class="container website-header mt-0 mt-lg-2 mb-3">
-    <div class="row justify-content-evenly">
+    <div class="row justify-content-evenly mx-0">
         {# Logo and (hidden) name/title of website. #}
         <h1 class="col-12 col-md-3 order-1 order-md-0 fs-6 fs-lg-5 py-1 py-lg-2 m-0 p-0"
             style="min-height: 5em;">
