Implemented new/updated requirements.

--- a/views/custom-templates/study-materials.html.twig
+++ b/views/custom-templates/study-materials.html.twig
@@ -1,1 +1,2 @@
-{% extends "post-types/page.html.twig" with {category_name: 'Studijní materiály'} %}
+{% set category_name: 'Studijní materiály' %}
+{% extends "post-types/page.html.twig" %}
