--- a/views/custom-templates/teaching-materials.html.twig
+++ b/views/custom-templates/teaching-materials.html.twig
@@ -1,1 +1,2 @@
-{% extends "post-types/page.html.twig" with {category_name: 'Výukové materiály'} %}
+{% set category_name: 'Výukové materiály' %}
+{% extends "post-types/page.html.twig" %}
