--- a/views/custom-templates/teaching-materials.html.twig
+++ b/views/custom-templates/teaching-materials.html.twig
@@ -1,2 +1,2 @@
-{% set category_name: 'Výukové materiály' %}
+{% set category_name = 'Výukové materiály' %}
 {% extends "post-types/page.html.twig" %}
