Implemented new/updated requirements.

--- a/views/post-types/teach_material_cat.html.twig
+++ b/views/post-types/teach_material_cat.html.twig
@@ -1,3 +1,4 @@
+{% set category_name = 'Výukové materiály' %}
 {% extends "post-types/page.html.twig" %}
 
 {# Page with list of teaching materials. #}
