--- a/views/custom-templates/teach_material_cat_photos.html.twig
+++ b/views/custom-templates/teach_material_cat_photos.html.twig
@@ -1,4 +1,4 @@
-{% extends "post-types/page.html.twig" %}
+{% extends "post-types/teach_material_cat.html.twig" %}
 
 {% block article_content %}
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
