Implemented new/updated requirements.

--- a/views/custom-templates/chemical-industry-materials.html.twig
+++ b/views/custom-templates/chemical-industry-materials.html.twig
@@ -1,4 +1,4 @@
-{% extends "post-types/page.html.twig" %}
+{% extends "post-types/study_material_cat.html.twig" %}
 
 {#
 Theme for page with list of chemical industry materials.
