Implemented new/updated requirements.

--- a/views/single-customs/single-equation-category.html.twig
+++ b/views/single-customs/single-equation-category.html.twig
@@ -1,3 +1,5 @@
+{% set category_name = 'Studijní materiály' %}
+{% set sub_category_name = 'Chemické výpočty' %}
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
