--- a/views/post-types/single-map_company.html.twig
+++ b/views/post-types/single-map_company.html.twig
@@ -1,3 +1,5 @@
+{% set category_name = 'Studijní materiály' %}
+{% set sub_category_name = 'Mapa chemického průmyslu ČR a SR' %}
 {% extends "post-types/page.html.twig" %}
 
 {% block article_content %}
