--- a/views/single-customs/single-industry-material.html.twig
+++ b/views/single-customs/single-industry-material.html.twig
@@ -1,3 +1,5 @@
+{% set category_name = 'Studijní materiály' %}
+{% set sub_category_name = 'Suroviny chemického průmyslu' %}
 {% extends "post-types/page.html.twig" %}
 
 {% block article_signpost %}
